Fix #124646: Cycles: Point Density node still works on surfaces in OSL

This was already sort of disabled in 4.0 (in #109712), but still worked in OSL,
so let's make it consistent.

Pull Request: https://projects.blender.org/blender/blender/pulls/125928